...

            final users = snapshot.data ?? [];

            if (users.isEmpty) {
              return const Center(
                // <<<--- AÑADIDO (para TC-008)
                child: Text('No se encontraron usuarios.', key: Key('users_empty_list_text')),
              );
            }

            return ListView.builder(
              padding: const EdgeInsets.symmetric(horizontal: 12, vertical: 8),
              itemCount: users.length,
...
