...
    return HomeViewTemplate(
      title: 'Planes de Entrenamiento',
      body: _buildBody(planProvider, isCoach, context),
      floatingActionButton: isCoach
          ? FloatingActionButton(
              // <<<--- AÑADIDO (para TC-009, TC-010)
              key: const Key('plans_create_plan_fab'),
              backgroundColor: AppColors.primary,
              foregroundColor: Colors.white,
              tooltip: 'Crear nuevo plan',
              child: const Icon(Icons.add),
              onPressed: () {
                Navigator.push(
...
